# fzf

./: CHANGES.md  README.md  dune  fzf.opam
src/: dune  fzf.ml  fzf.mli
test/lib/: dune  fzf_test_lib.ml  fzf_test_lib.mli
test/src/: command_output.ml  creation_options.ml  creation_options.mli  creation_options_2.ml  dune  empty_list_of_options.ml  expect_option.ml  fzf_arg_type.ml  fzf_fails.ml  fzf_subcommands.ml  fzf_test.ml  initial.ml  large_input.ml  narrow_selection.ml  newlines.ml  no_sorting.ml  pick_case_match.ml  pick_exact_match.ml  pick_many.ml  pick_map.ml  selection_with_only_one_match_will_prompt_otherwise.ml  streaming.ml  test_helpers.ml  test_helpers.mli  type_a_letter.ml  verify_no_fd_leak.ml
