(library
 (name fzf_test)
 (libraries async core expect_test_helpers_async expect_test_helpers_core
   core_unix.filename_unix fzf_test_lib jane_term_types
   jenga_rules_integration tmux)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias default)
 (deps
  %{workspace_root}/app/kazoo-lint/bin/klint.exe
  jbuild
  (glob_files *.ml)
  (glob_files *.mli))
 (action
  (bash "%{workspace_root}/app/kazoo-lint/bin/klint.exe -directory .")))
